# text-to-cad

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-cad.txt
.agents/skills/cad/: README.md  SKILL.md  requirements.txt
models/: README.md
skills/cad/: requirements.txt
skills/cad/agents/: openai.yaml
skills/cad/references/: cadref.md  common-library.md  gen-dxf.md  gen-step-assembly.md  gen-step-part.md  generator-contract.md  geometry-workflow.md  prompt-refs.md  snapshot.md  validation-and-snapshots.md
skills/urdf/: SKILL.md
skills/urdf/agents/: openai.yaml
skills/urdf/references/: gen-urdf.md  generator-contract.md  urdf-workflow.md  validation.md
skills/urdf/scripts/: urdf_source.py
viewer/: README.md  main.jsx  package.json  vite.config.mjs
viewer/app/: globals.css
viewer/components/: CadViewer.js  CadWorkspace.js  DxfViewer.js
viewer/components/ui/: sidebar.jsx
viewer/components/workbench/: CadRenderPane.js  CadWorkspaceAssemblyInspectPill.js  CadWorkspaceTopBar.js  DxfFileSheet.js  FileExplorerSidebar.js  FileSheet.js  FloatingToolBar.js  LookSettingsPopover.js  StatusToast.js  StepAssemblyFileSheet.js  ToolbarShell.js  UrdfFileSheet.js  ViewerAlertDialog.js  ViewerLoadingOverlay.js
viewer/lib/: cadDirectoryScanner.mjs  cadDirectoryScanner.test.mjs  cadManifestStore.js  cadRefs.js  clipboard.js  clipboard.test.js  lookSettings.js  lookSettings.test.js  perspective.js  perspective.test.js  renderAssetClient.js
viewer/lib/assembly/: meshData.js  meshData.test.js
viewer/lib/render/: glbMeshData.js
(+92 files in other folders)
